# star-conflict-chat-translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  game_dictionary.json  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: development.md  game-dictionary.md  installation.md  troubleshooting.md  user-guide.md
scripts/: build.py  install_linux.sh  install_macos.sh  install_windows.bat
src/sc_translator/: main.py
tests/: test_main.py  test_translator.py
